// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Headline > with drilling on single measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "acugFHNJgsBy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on single measure > should create expected props for core chart 1`] = `
{
  "drillableItems": [
    [Function],
  ],
  "exportTitle": "Headline",
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on single measure with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "acugFHNJgsBy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on single measure with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
  ],
  "exportTitle": "Headline",
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on two measures > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "acugFHNJgsBy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on two measures > should create expected props for core chart 1`] = `
{
  "drillableItems": [
    [Function],
    [Function],
  ],
  "exportTitle": "Headline",
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on two measures with underlining disabled > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "acugFHNJgsBy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with drilling on two measures with underlining disabled > should create expected props for core chart 1`] = `
{
  "config": {
    "disableDrillUnderline": true,
  },
  "drillableItems": [
    [Function],
    [Function],
  ],
  "exportTitle": "Headline",
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with single measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "acugFHNJgsBy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with single measure > should create expected props for core chart 1`] = `
{
  "exportTitle": "Headline",
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "acugFHNJgsBy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures > should create expected props for core chart 1`] = `
{
  "exportTitle": "Headline",
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures one PoP > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "acugFHNJgsBy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        {
          "measure": {
            "alias": "Won Last Year",
            "definition": {
              "popMeasureDefinition": {
                "measureIdentifier": "m_acugFHNJgsBy",
                "popAttribute": {
                  "identifier": "closed.year",
                  "type": "attribute",
                },
              },
            },
            "localIdentifier": "m_e40a8329_m_acugFHNJgsBy_closed.year",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "alias": "Won Last Year",
        "definition": {
          "popMeasureDefinition": {
            "measureIdentifier": "m_acugFHNJgsBy",
            "popAttribute": {
              "identifier": "closed.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_e40a8329_m_acugFHNJgsBy_closed.year",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures one PoP > should create expected props for core chart 1`] = `
{
  "exportTitle": "Headline",
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures with german separators > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "acugFHNJgsBy",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "aangOxLSeztu",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`Headline > with two measures with german separators > should create expected props for core chart 1`] = `
{
  "config": {
    "separators": {
      "decimal": ",",
      "thousand": ".",
    },
  },
  "exportTitle": "Headline",
  "workspace": "reference-workspace",
}
`;
